// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Col renders col-auto 1`] = `
.c0 {
  --acrool-gutter-x: 1.5rem;
  --acrool-gutter-y: 0;
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  -webkit-column-gap: var(--acrool-gutter-x);
  column-gap: var(--acrool-gutter-x);
  row-gap: var(--acrool-gutter-y);
  grid-template-columns: repeat(2,1fr);
}

<div
  class="c0"
  data-grid="grid-2"
>
  <div>
    col 1
  </div>
  <div>
    col 2
  </div>
</div>
`;

exports[`Grid Col renders grid default 1`] = `
.c0 {
  --acrool-gutter-x: 1.5rem;
  --acrool-gutter-y: 0;
  display: grid;
  grid-template-rows: auto;
  grid-template-columns: repeat(12,1fr);
  -webkit-column-gap: var(--acrool-gutter-x);
  column-gap: var(--acrool-gutter-x);
  row-gap: var(--acrool-gutter-y);
  grid-template-columns: repeat(2,1fr);
}

<div
  class="c0"
  data-grid="grid-2"
>
  col
</div>
`;
